.provarCaches/00D5f000005vwGkEAI/objects/rstk__pohvcontaud__c.object
<CustomObject>
    <description>pohvcontaud__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pohvcontaud_pohvcont__r.rstk__pohvcont_serialno__c  + &apos; (&apos; +  rstk__pohvcontaud_poship__r.rstk__poship_shipmentid__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcontaud_currduedate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Current Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcontaud_destination__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Destination</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcontaud_obship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Outbound Shipment</label>
        <referenceTo>rstk__obship__c</referenceTo>
        <relationshipLabel>High Value Container Audit</relationshipLabel>
        <relationshipName>pohvcontauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcontaud_obshipcont__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Outbound Shipment Container</label>
        <referenceTo>rstk__obshipcont__c</referenceTo>
        <relationshipLabel>High Value Container Audit</relationshipLabel>
        <relationshipName>pohvcontauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcontaud_pohvcont__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>HV Container</label>
        <referenceTo>rstk__pohvcont__c</referenceTo>
        <relationshipLabel>High Value Container Audit</relationshipLabel>
        <relationshipName>pohvcontauds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcontaud_poship__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipper</label>
        <referenceTo>rstk__poship__c</referenceTo>
        <relationshipLabel>High Value Container Audit</relationshipLabel>
        <relationshipName>pohvcontauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohvcontaud_poshipcont__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipment Container</label>
        <referenceTo>rstk__poshipcont__c</referenceTo>
        <relationshipLabel>High Value Container Audit</relationshipLabel>
        <relationshipName>pohvcontauds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>High Value Container Audit</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_High_Value_Container_Audit</fullName>
        <columns>NAME</columns>
        <columns>rstk__pohvcontaud_pohvcont__c</columns>
        <columns>rstk__pohvcontaud_poshipcont__c</columns>
        <columns>rstk__pohvcontaud_currduedate__c</columns>
        <columns>rstk__pohvcontaud_poship__c</columns>
        <columns>rstk__pohvcontaud_destination__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>High Value Container Audit</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Value Container Audit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Shipper_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( rstk__pohvcontaud_poship__c )</errorConditionFormula>
        <errorMessage>Shipper is required</errorMessage>
    </validationRules>
</CustomObject>